--- a/StormWeb/Views/Advertisement/Delete.cshtml
+++ b/StormWeb/Views/Advertisement/Delete.cshtml
@@ -45,7 +45,7 @@
     </table>
 <p>
         <input type="submit" value="Delete" class="btn btn-danger" /> 
-       @Html.Button_DeleteOrCancel("Cancel", "../List")
+       @Html.Button_DeleteOrCancel("Cancel", "../../Advertisement/List")
 </p>
 
 </div>
