--- a/StormWeb/Views/Branch/Create.cshtml
+++ b/StormWeb/Views/Branch/Create.cshtml
@@ -12,7 +12,7 @@
     <fieldset style="margin-left: 50px;">
         <legend>
             <h2>
-                Create New Branch</h2>
+                Add New Branch</h2>
         </legend>
         <div class="control-group">
             @Html.Label("Branch Name", null, new { @class = "control-label form-required" })
@@ -100,7 +100,7 @@
                 
                 <div class="controls">
                       <input type="submit" class="btn btn-primary" value="Create" />
-        @Html.Button_DeleteOrCancel("Cancel", "Index")
+        @Html.Button_DeleteOrCancel("Cancel", "../../Branch")
                    
                 </div>
             </div>
