--- a/StormWeb/Views/Course/Index.cshtml
+++ b/StormWeb/Views/Course/Index.cshtml
@@ -109,7 +109,7 @@ $(function () {
                                         </ul>
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.Course_Level.Course_Level1)
+                                        @Html.DisplayFor(modelItem => item.Course_Level.Course_Level_Name)
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Course_Name)
