--- a/StormWeb/Views/Course/ViewCourses.cshtml
+++ b/StormWeb/Views/Course/ViewCourses.cshtml
@@ -65,7 +65,7 @@
                                 { 
                                 <tr>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.Course_Level.Course_Level1)
+                                        @Html.DisplayFor(modelItem => item.Course_Level.Course_Level_Name)
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Course_Name)
