--- a/StormWeb/Views/Document/ShowAllDocumentTemplates.cshtml
+++ b/StormWeb/Views/Document/ShowAllDocumentTemplates.cshtml
@@ -83,7 +83,7 @@ $(function () {
                                         <ul>
                                             <li>@Html.DisplayFor(modelItem => item.Course_Name)
                                                 </li>
-                                                <li>@Html.DisplayFor(modelItem => item.Course_Level.Course_Level1)
+                                                <li>@Html.DisplayFor(modelItem => item.Course_Level.Course_Level_Name)
                                                 </li>
                                             <li><i class="icon-small-black "></i>
                                                 @Html.DisplayFor(modelItem => item.Faculty.University.University_Name)
