--- a/StormWeb/Views/Document/UploadCaseDoc.cshtml
+++ b/StormWeb/Views/Document/UploadCaseDoc.cshtml
@@ -18,6 +18,12 @@
                      valid = false;
                      alert("File is not selected");
                  }
+
+                 if ($("#file").val().length >= 50) {
+                     valid = false;
+                     alert("File name must be less than 50 characters!");
+                 }
+
                  var ext = $('#file').val().split('.').pop().toLowerCase();
                  if ($.inArray(ext, ['pdf']) == -1) {
                      valid = false;
