--- a/StormWeb/Views/Help/Index.cshtml
+++ b/StormWeb/Views/Help/Index.cshtml
@@ -170,7 +170,7 @@ How can I get the contact details? </a>
 </div>
 <div class="accordion-body collapse" id="Ten">
 <div class="accordion-inner">
-Please visit this link: <a href="http://www.stormedu.com.au/main/contactus.php"> Click here</a>
+Please visit this link: <a href="http://www.stormedu.com.au/main/contact.php"> Click here</a>
 </div>
 </div>
 </div>
