--- a/StormWeb/Views/Shared/Refresh.cshtml
+++ b/StormWeb/Views/Shared/Refresh.cshtml
@@ -16,7 +16,7 @@
         }
         else
         {
-            <text>parent.location = @(Model.url);</text>
+            <text>parent.location = "@(Model.url)";</text>
         }
     });
 </script>
