--- a/StormWeb/Views/Staff/Create.cshtml
+++ b/StormWeb/Views/Staff/Create.cshtml
@@ -204,7 +204,7 @@
             <div class="control-group">
                 <div class="controls">
                     <input type="submit" class="btn btn-primary" value="Create" />
-                    @Html.Button_DeleteOrCancel("Cancel", "Index")
+                    @Html.Button_DeleteOrCancel("Cancel", "../../Staff")
                 </div>
             </div>
         </fieldset>
