--- a/StormWeb/Views/StudentStaff/SwitchStaff.cshtml
+++ b/StormWeb/Views/StudentStaff/SwitchStaff.cshtml
@@ -9,8 +9,10 @@
         <legend>Select Staff</legend>
                     @Html.Hidden("studentId", (int) @ViewBag.studentId)
                     @if (StormWeb.Helper.CookieHelper.isStaff())
-                    {
-                        @Html.DropDownList("staffWithCases",ViewBag.staffWithCases as SelectList,"Select Staff")
+                    { 
+                              <div class="control-group">  <div class="controls">
+                        @Html.DropDownList("staffWithCases", ViewBag.staffWithCases as SelectList, "--Select--", new { @class = "chzn-select" })
+                        </div></div>
                         @Html.ValidationMessage("StudentEmpty")
                      <div>
                              <input id="submit" type="submit" value="Assign" class="btn btn-primary"/>
