--- a/StormWeb/Views/University/Create.cshtml
+++ b/StormWeb/Views/University/Create.cshtml
@@ -69,7 +69,7 @@
             <div class="control-group">
                 <div class="controls">
                     <input type="submit" value="Create" class="btn btn-primary" />
-                    @Html.Button_DeleteOrCancel("Cancel", "Index")
+                    @Html.Button_DeleteOrCancel("Cancel", "../../University")
                 </div>
             </div>
         </fieldset>
