--- a/StormWeb/Content/css/bootstrap.css
+++ b/StormWeb/Content/css/bootstrap.css
@@ -121,7 +121,7 @@ body {
 	font-size: 12px;
 	line-height: 18px;
 	color: #333333;
-	background: url(../img/pattern-light-bg.jpg);
+	background: url(../img/pattern.png);
 }
 a {
 	color: #0088cc;
