--- a/StormWeb/Views/Advertisement/Create.cshtml
+++ b/StormWeb/Views/Advertisement/Create.cshtml
@@ -25,8 +25,9 @@
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
-@using (Html.BeginForm()) {
+ @using (Html.BeginForm("Create", "Advertisement", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                              {
+@*@using (Html.BeginForm()) {*@
     @Html.ValidationSummary(true)
     <fieldset>
         <legend>Advertisement</legend>
@@ -62,7 +63,7 @@
            </div>
          <div class="editor-field">                         
             
-              <input type="file" id="file" name="file"  />
+              <input type="file" id="file" name="filename"  />
                
            
          </div>                          
