--- a/StormWeb/Views/Associate/Delete.cshtml
+++ b/StormWeb/Views/Associate/Delete.cshtml
@@ -1,73 +1,68 @@
-﻿@model StormWeb.Models.Course
+﻿@model StormWeb.Models.Associate
 @{
     ViewBag.Title = "Delete";
 }
 <h3>
     Are you sure you want to delete this?</h3>
-<br />@Html.ValidationSummary(true, "", new { @class = "error" })
+<br />
+@Html.ValidationSummary(false, "", new { @class = "error" })
 <div class="row-fluid">
     <div class="span12">
         <div class="box-tab">
             <div class="page-header">
                 <h1>
-                    &nbsp;&nbsp;Course Details</h1>
+                    &nbsp;&nbsp;Associate Details
+                </h1>
             </div>
             <div class="widget-content">
                 <div class="widget-box">
+                    <br />
                     <table class="table">
                         <tr>
                             <th>
-                                Course Level
+                                AssociateName
                             </th>
                             <td>
-                                @Html.DisplayFor(model => model.Course_Level.Course_Level_Name)
+                                @Html.DisplayFor(model => model.AssociateName)
+                            </td>
+                        </tr>
+                       <tr>
+                            <th>
+                                Address
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.Address.Address_Name)
                             </td>
                         </tr>
                         <tr>
                             <th>
-                                Faculty
+                                Contact Person
                             </th>
-                            <td>@Html.DisplayFor(model => model.Faculty.Faculty_Name)
+                            <td>
+                                @Html.DisplayFor(model => model.ContactPerson)
                             </td>
                         </tr>
                         <tr>
                             <th>
-                                Semester Commencement Date
+                                Primary Contact
                             </th>
-                            <td>
-                                @Html.DisplayFor(model => model.Commence_Date_Sem)
+                            <td>@Html.DisplayFor(model => model.Primary_Contact)
                             </td>
                         </tr>
                         <tr>
                             <th>
-                                Course Name
+                                Secondary Contact
                             </th>
                             <td>
-                                @Html.DisplayFor(model => model.Course_Name)
+                                @Html.DisplayFor(model => model.Secondary_Contact)
                             </td>
                         </tr>
                         <tr>
                             <th>
-                                Duration
+                                Email
                             </th>
                             <td>
-                                @Html.DisplayFor(model => model.Duration)
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>
-                                Description
-                            </th>
-                            <td>
-                                @Html.DisplayFor(model => model.Description)
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>
-                                Fee
-                            </th>
-                            <td>
-                                $(AUD)@Html.DisplayFor(model => model.Fee)
+                                @Html.DisplayFor(model => model.Email)
                             </td>
                         </tr>
                     </table>
@@ -75,32 +70,32 @@
             </div>
         </div>
     </div>
-</div> 
+</div>
 <p>
     <input type="submit" value="Delete" class="btn btn-danger  tip-top" data-toggle="modal"
-        href="#myModal1" data-original-title="Delete Staff Details" />
-    @Html.Button_BackToList("Back To List", "../../Course/List")
+        href="#myModal1" data-original-title="Delete Associate Details" />
+    @Html.Button_BackToList("Bact To List", "../../Associate")
 </p>
-@using (Html.BeginForm("Delete", "Course", FormMethod.Post))
+@using (Html.BeginForm("Delete", "Associate", FormMethod.Post))
 {   
     <div class="modal hide fade" id="myModal1">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">
                 ×</button>
             <h3>
-                Delete Staff Details</h3>
+                Delete Associate Details</h3>
         </div>
         <div class="modal-body">
             <p>
-                Are you sure you want to delete this Course ?
-                <div class="alert alert-error fade in">
+                Are you sure you want to delete this Associate ?
+              @*  <div class="alert alert-error fade in">
                     <button data-dismiss="alert" class="close" type="button">
                         ×</button>
-                    <strong>Warning !</strong> Deleting the course deletes all the associated Application
-                    forms , Documents and Applications.
+                     <strong>Warning !</strong> Deleting the course deletes all the associated Client
+                    Details , Applications , Appointments and Cases. 
                     <br />
                     <br />
-                </div>
+                </div>*@
             </p>
         </div>
         <div class="modal-footer">
