--- a/StormWeb/Views/Branch/Delete.cshtml
+++ b/StormWeb/Views/Branch/Delete.cshtml
@@ -2,18 +2,16 @@
 @{
     ViewBag.Title = "Delete";
 }
-<h2>
-    Delete</h2>
 <h3>
     Are you sure you want to delete this?</h3>
 <br />
 @Html.ValidationSummary(false, "", new { @class = "error" })
 <div class="row-fluid">
     <div class="span12">
-        <div class="widget-block">
-            <div class="widget-head">
-                <h2>
-                    Branch Details</h2>
+        <div class="box-tab">
+            <div class="page-header">
+                <h1>
+                    &nbsp;&nbsp;Branch Details</h1>
             </div>
             <div class="widget-content">
                 <div class="widget-box">
@@ -76,7 +74,7 @@
 <p>
     <input type="submit" value="Delete" class="btn btn-danger  tip-top" data-toggle="modal"
         href="#myModal1" data-original-title="Delete Branch Details" />
-    @Html.Button_BackToList("Bact To List", "../Index")
+    @Html.Button_BackToList("Bact To List", "../../Branch")
 </p>
 @using (Html.BeginForm("Delete", "Branch", FormMethod.Post))
 {   
@@ -98,7 +96,7 @@
                     <br />
                     <br />
                 </div>
-            </p> 
+            </p>
         </div>
         <div class="modal-footer">
             <a href="#" class="btn" data-dismiss="modal" id="dismissModal">No</a>
