--- a/StormWeb/Views/Client/Delete.cshtml
+++ b/StormWeb/Views/Client/Delete.cshtml
@@ -2,17 +2,16 @@
 @{
     ViewBag.Title = "Delete";
 }
-<h2>
-    Delete</h2>
+ 
 <h3>
-    Are you sure you want to delete this?</h3>
+    Are you sure you want to delete this?</h3><br />
 @Html.ValidationSummary(true, "", new { @class = "error" })
 <div class="row-fluid">
     <div class="span12">
-        <div class="widget-block">
-            <div class="widget-head">
-                <h2>
-                    Client Details</h2>
+        <div class="box-tab">
+            <div class="page-header">
+                <h1>
+                    &nbsp;&nbsp;Client Details</h1>
             </div>
             <div class="widget-content">
                 <div class="widget-box">
@@ -154,7 +153,7 @@
 <p>
     <input type="submit" value="Delete" class="btn btn-danger  tip-top" data-toggle="modal"
         href="#myModal1" data-original-title="Delete Client Details" />
-    @Html.Button_DeleteOrCancel("Bact To List", "../Index")
+    @Html.Button_BackToList("Bact To List", "../../Client")
 </p>
 @using (Html.BeginForm("Delete", "Client", FormMethod.Post))
 {   
@@ -164,10 +163,18 @@
                 ×</button>
             <h3>
                 Delete Client Details</h3>
-        </div>
-        <div class="modal-body">
+        </div> 
+         <div class="modal-body">
             <p>
                 Are you sure you want to delete this Client ?
+                <div class="alert alert-error fade in">
+                    <button data-dismiss="alert" class="close" type="button">
+                        ×</button>
+                    <strong>Warning !</strong> Deleting the Client deletes all the associated Client
+                    Details ,Enquires ,Logs , Student Details, Applications , Appointments and Cases.
+                    <br />
+                    <br />
+                </div>
             </p>
         </div>
         <div class="modal-footer">
