--- a/StormWeb/Views/Course/Details.cshtml
+++ b/StormWeb/Views/Course/Details.cshtml
@@ -6,10 +6,10 @@
  
 <div class="row-fluid">
     <div class="span12">
-        <div class="widget-block">
-            <div class="widget-head">
-                <h3>
-                    Course Details</h3>
+       <div class="box-tab">
+            <div class="page-header">
+                <h1>
+                    &nbsp;&nbsp;Course Details</h1>
             </div>
             <div class="widget-content">
                 <div class="widget-box">
@@ -27,7 +27,7 @@
                                 <label class="control-label-bold" for="input01">
                                     Course Level</label>
                             </td>
-                            <td>@Html.DisplayFor(model => model.Course_Level.Course_Level1, new { Class = "input-xlarge" })
+                            <td>@Html.DisplayFor(model => model.Course_Level.Course_Level_Name, new { Class = "input-xlarge" })
                             </td>
                         </tr>
                         <tr>
