--- a/StormWeb/Views/Course/List.cshtml
+++ b/StormWeb/Views/Course/List.cshtml
@@ -1,108 +1,118 @@
 ﻿@model IEnumerable<StormWeb.Models.Course>
-
 @{
     ViewBag.Title = "List";
-} 
+}
 <div class="row-fluid">
     <div class="span12">
-       @* <div class="widget-block">
+        @* <div class="widget-block">
             <div class="widget-head">
                 <h5>
                     Course list</h5>
                 
             </div>*@
-              <div class="box-tab">
-              <div class="page-header">
-                 <h1> &nbsp;&nbsp;Course List </h1>
-                   </div>
+        <div class="box-tab">
+            <div class="page-header">
+                <h1>
+                    &nbsp;&nbsp;Course List
+                </h1>
+            </div>
             <div class="widget-content">
-               <div class="widget-box" style="padding: 15px;"> 
-                      <table class="data-tbl-simple table table-bordered dataTable">
-                       <thead>
-                       <tr>
-                        <th>
-                            University Name
-                        </th>
-                        <th>
-                            Course Level 
-                        </th>
-                        <th>
-                            Course Name
-                        </th>  
-                        <th>
-                            Semester Commencement Date
-                        </th>
-                        <th>
-                            Duration
-                        </th>
-                        <th>
-                            Total Course Fee
-                        </th>
-                        <th>
-                            Description
-                        </th>
-                        <th>
-                            <i class="color-icons bullet_key_co"></i>Actions
-                        </th>
-                    </tr>
-			        </thead>
-			        <tbody>
-			        @foreach (var item in Model)
-                    {                                                                
-                        <tr>
-                        <td>
-                        <a href = "@item.Faculty.University.University_Url">@item.Faculty.University.University_Name</a>
-                        @*@Html.DisplayFor(modelItem => item.Faculty.University.University_Name)*@
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Course_Level.Course_Level1)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Course_Name)
-                        </td>
-                        <td>                                
-                                     
-                            @if (item.Commence_Date_Sem == null)
-                            {
-                                @Html.Display("_")
-                            }
-                            else
-                            {
-                                @Html.Encode(item.Commence_Date_Sem.Value.ToString("dd/MM/yyyy"))    
-                            }   
-                        </td>        
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Duration)
-                        </td>
-                            <td>
-                            $(AUD)@Html.DisplayFor(modelItem => item.Fee)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Description)
-                        </td>       
-                        <td>
-                    @*     <a href="@Url.Action("Edit", new { id = item.Course_Id })" class="tip-top" data-original-title="Edit"> <span class="color-icons page_white_paintbrush_co"></span>  </a> |
-                        <a href="@Url.Action("Details", new { id = item.Course_Id })" class="iframe tip-top" data-original-title="Details"> <span class="color-icons magnifier_co"></span> </a> |
-                        <a href="@Url.Action("Delete", new { id = item.Course_Id })" class="tip-top" data-original-title="Delete"> <span class="color-icons delete_co"></span> </a>*@
-        
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Course_Id }) |      
-                        <a class='iframe' href="@Url.Action("Details", new { id = item.Course_Id })" >Details</a>|                      
-                      @*  @Html.ActionLink("Details", "Details", new { id = item.Course_Id })|*@
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Course_Id })
-                        </td>
-                        </tr>
+                <div class="widget-box" style="padding: 15px;">
+                    <table class="data-tbl-simple table table-bordered dataTable">
+                        <thead>
+                            <tr>
+                                <th>
+                                    University Name
+                                </th>
+                                <th>
+                                    Course Level
+                                </th>
+                                <th>
+                                    Course Name
+                                </th>
+                                <th>
+                                    Semester Commencement Date
+                                </th>
+                                <th>
+                                    Duration
+                                </th>
+                                <th>
+                                    Total Course Fee
+                                </th>
+                                <th>
+                                    Description
+                                </th>
+                                <th>
+                                    <i class="color-icons bullet_key_co"></i>Actions
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {                                                                
+                                <tr>
+                                    <td>
+                                        <a href = "@item.Faculty.University.University_Url">@item.Faculty.University.University_Name</a>
+                                        @*@Html.DisplayFor(modelItem => item.Faculty.University.University_Name)*@
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Course_Level.Course_Level_Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Course_Name)
+                                    </td>
+                                    <td>
+                                        @if (item.Commence_Date_Sem == null)
+                                        {
+                                            @Html.Display("_")
+                                        }
+                                        else
+                                        {
+                                            @Html.Encode(item.Commence_Date_Sem.Value.ToString("dd/MM/yyyy"))    
+                                        }
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Duration)
+                                    </td>
+                                    <td>
+                                        $(AUD)@Html.DisplayFor(modelItem => item.Fee)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Description)
+                                    </td>
+                                    <td>
+                                        @*      <a href="@Url.Action("Edit", new { id = item.Course_Id })" class="tip-top" data-original-title="Edit"> <span class="color-icons page_white_paintbrush_co"></span>  </a> |
+                            <a href="@Url.Action("Details", new { id = item.Course_Id })" class="iframe tip-top" data-original-title="Details"> <span class="color-icons magnifier_co"></span> </a> |
+                            <a href="@Url.Action("Delete", new { id = item.Course_Id })" class="tip-top" data-original-title="Delete"> <span class="color-icons delete_co"></span> </a> 
+                             @Html.ActionLink("Details", "Details", new { id = item.Course_Id })|*@
+                                           @if (HttpContext.Current.User.IsInRole("BranchManager") || HttpContext.Current.User.IsInRole("Super"))
+                                        {  
+   
+                                            @Html.ActionLink("Edit", "Edit", new { id = item.Course_Id }) 
+                                            <span>| </span> 
+                                        }
+                                        <a class='iframe' href="@Url.Action("Details", new { id = item.Course_Id })" >Details</a> 
+                                           @if (HttpContext.Current.User.IsInRole("BranchManager") || HttpContext.Current.User.IsInRole("Super"))
+                                        {    
+                                            <span>| </span>
+                                            @Html.ActionLink("Delete", "Delete", new { id = item.Course_Id }) 
+                                        }
+                                    </td>
+                                </tr>
                                   
-                    }														
-			        </tbody>
-			   </table>
-		</div>
-	</div>
-   </div> 
-   </div>
-   </div>         
-        <p>
-            @Html.Button_Add("Create New", "Create")
-            @Html.Button_BackToList("Back to Universities", "../../University/Index") 
-        </p> 
-
-
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<p>
+      @if (HttpContext.Current.User.IsInRole("BranchManager") || HttpContext.Current.User.IsInRole("Super"))
+                                        {  
+   
+        @Html.Button_Add("Create New", "Create")
+    }
+    @Html.Button_BackToList("Back to Universities", "../../University/")
+</p>
