--- a/StormWeb/Views/Message/Read.cshtml
+++ b/StormWeb/Views/Message/Read.cshtml
@@ -22,9 +22,10 @@
         
         </h4> <small> on @Html.DisplayFor(model => model.TimeStamp)</small>
     </blockquote>
-
-   <div class="well">
+     <div class="well">
         @Html.Raw(Model.MessageContent)
-        </div>
+    </div>
+
+    <a class="btn btn-primary" href="@Url.Action("Compose", new { to = Model.UserFrom, layout = "~/Views/Shared/_LayoutEmpty.cshtml", closeBox="true" })">Reply</a>
 </fieldset>
 </div>
