--- a/StormWeb/Views/Report/RunReport.cshtml
+++ b/StormWeb/Views/Report/RunReport.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model StormWeb.Models.ReportViewModel
+
+@{
     ViewBag.Title = "Run Report";
 }
 
@@ -6,7 +8,116 @@
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
-@using (Html.BeginForm("RunReport", "Report",
+<script>
+
+    $(function () {
+        $(".dp1").datepicker({
+            dateFormat: 'dd/mm/yy',
+            yearRange: '-100:c',
+            changeMonth: true,
+            changeYear: true,
+            showOn: "button",
+            buttonImage: "/Content/img/calendar_btn.png",
+            buttonImageOnly: true
+        });
+
+        $("input[name='allTime']").change(function () {
+            if ($(this).attr("checked") != "undefined" && $(this).attr("checked") == "checked" && $(this).attr("id") == "allTime_true")
+                $("#DateRange").hide();
+            else
+                $("#DateRange").show();
+        });
+    });
+
+</script>
+
+<div class="row-fluid">
+    <div class="span12">
+        <div class="box-tab">
+            <div class="page-header">
+                <h1>
+                    &nbsp;&nbsp;Reports
+                </h1>
+            </div>
+                <div class="widget-content">
+        <div class="widget-box" style="padding: 15px;">
+            <div>
+            @using (Html.BeginForm("RunReport", "Report", FormMethod.Post, new {@class="form-horizontal"}))
+            {
+                <div class="control-group">
+                    <label class="control-label">
+                        Type</label>
+                    <div class="controls">
+                        @Html.DropDownListFor(r => r.reportType, new SelectList((from node in System.Xml.Linq.XDocument.Load(System.Web.HttpContext.Current.Server.MapPath("ReportType.xml")).Descendants("report")
+                                                                                 select new System.Web.UI.WebControls.ListItem(node.Element("name").Value, node.Element("code").Value))
+                ))
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label">
+                        Range
+                    </label>
+                    <div class="controls">
+                        <label class="radio">
+                            @Html.RadioButtonFor(m => m.allTime, true, new { id = "allTime_true" }) All time
+                        </label>
+                        <label class="radio">
+                            @Html.RadioButtonFor(m => m.allTime, false, new { id = "allTime_false" }) Date Restricted
+                        </label>
+                    </div>
+                </div>
+                 <div id="DateRange" style="display:none">
+                    <div class="control-group">
+                        <div class="input-append date" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
+                            <div class="control-group">
+                                @Html.Label("Start Date", null, new { @class = "control-label" })
+                                <div class="controls">
+                                    <div class="input-append">
+                                        @Html.EditorFor(model => model.dateTimeStart)
+                                       @* @Html.TextBoxFor(model => model.dateTimeStart, new { @readonly = "readonly", @class = "dp1" })*@
+                                    </div>
+                                    <p class="help-block">
+                                        @Html.ValidationMessageFor(model => model.dateTimeStart)
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+               
+                    <div class="control-group">
+                        <div class="input-append date" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
+                            <div class="control-group">
+                                @Html.Label("End Date", null, new { @class = "control-label" })
+                                <div class="controls">
+                                    <div class="input-append">
+                                        @Html.EditorFor(model => model.dateTimeEnd)
+                                    </div>
+                                    <p class="help-block">
+                                        @Html.ValidationMessageFor(model => model.dateTimeEnd)
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="control-group">
+                    <div class="controls">
+                        <input type="submit" class="btn btn-large btn-primary" />
+                    </div>
+                </div>
+            }
+            </div>
+        </div>
+    </div>
+        </div>
+
+    </div>
+
+</div>
+
+
+
+@*@using (Html.BeginForm("RunReport", "Report",
         FormMethod.Post, new {  enctype = "multipart/form-data" }))
 {
     @Html.ValidationSummary(true)
@@ -47,7 +158,7 @@
             <input type="submit" value="Run"  />
         </p>
     </fieldset>
-}
+}*@
 <script type="text/javascript">
     $(document).ready(function () {
         // For DatePicker
