--- a/StormWeb/Views/Staff/Delete.cshtml
+++ b/StormWeb/Views/Staff/Delete.cshtml
@@ -1,11 +1,17 @@
 ﻿@model StormWeb.Models.Staff
+@{
+    ViewBag.Title = "Delete";
+}
+<h3>
+    Are you sure you want to delete this?</h3>
+<br />
 @Html.ValidationSummary(true, "", new { @class = "error" })
 <div class="row-fluid">
     <div class="span12">
-        <div class="widget-block">
-            <div class="widget-head">
-                <h5>
-                    Are you sure you want to delete this?</h5>
+       <div class="box-tab">
+            <div class="page-header">
+                <h1>
+                    &nbsp;&nbsp;Staff Details</h1>
             </div>
             <div class="widget-content">
                 <div class="widget-box">
@@ -115,7 +121,7 @@
 <p>
     <input type="submit" value="Delete" class="btn btn-danger  tip-top" data-toggle="modal"
         href="#myModal1" data-original-title="Delete Staff Details" />
-    | @Html.ActionLink("Back to List", "Index")
+     @Html.Button_BackToList("Back to List", "../../Staff")
 </p>
 @using (Html.BeginForm("Delete", "Staff", FormMethod.Post))
 {   
@@ -132,8 +138,9 @@
             </p>
         </div>
         <div class="modal-footer">
-            <a href="#" class="btn" data-dismiss="modal" id="dismissModal">No</a> 
+            <a href="#" class="btn" data-dismiss="modal" id="dismissModal">No</a>
             <input type="submit" class="btn btn-modal" id="save" type="submit" value="Yes" />
         </div>
     </div>
 }
+   
