--- a/StormWeb/Views/StudentCentre/AddQualification.cshtml
+++ b/StormWeb/Views/StudentCentre/AddQualification.cshtml
@@ -3,26 +3,27 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_LayoutEmpty.cshtml";
 }
-<h2>Add Qualification</h2>
+<h2>
+    Add Qualification</h2>
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
 @using (Html.BeginForm("AddQualification", "StudentCentre", FormMethod.Post))
 {
     @Html.ValidationSummary(false, null, new { @class = "error" })
  
+ 
     <div id="divEditProfile">
-        <table style="text-align: left;"> 
+        <table style="text-align: left;">
             <tr>
                 <th>
                     Qualification
                 </th>
                 <td>
                     @Html.TextBoxFor(model => model.Qualification)
-                    @Html.ValidationMessageFor(model => model.Qualification) 
+                    @Html.ValidationMessageFor(model => model.Qualification)
                 </td>
-             </tr>
-             <tr>
+            </tr>
+            <tr>
                 <th>
                     Major
                 </th>
@@ -31,7 +32,7 @@
                     @Html.ValidationMessageFor(model => model.Major)
                 </td>
             </tr>
-             <tr>
+            <tr>
                 <th>
                     University
                 </th>
@@ -47,22 +48,22 @@
                 <td>
                     @Html.TextBoxFor(model => model.Year_of_Passing)
                     @Html.ValidationMessageFor(model => model.Year_of_Passing)
-                </td> 
-            </tr>  
+                </td>
+            </tr>
         </table>
         <div class="modal-footer">
             <input type="submit" class="btn btn-primary" value="Save Changes" />
             <input type="button" id="closeModal" class="btn btn-danger cancelButton" value="Cancel" />
         </div>
     </div>
-} 
+}
 <script type="text/javascript">
 
     $(function(){
     @{
         if (ViewBag.successEdit != null)
         {
-      //  @:parent.location='/StudentCentre/Profile/@(Model.caseTable.First().Student_Id)?message=edit';
+            //  @:parent.location='/StudentCentre/Profile/@(Model.caseTable.First().Student_Id)?message=edit';
         @:parent.$.fn.colorbox.close();
         };
     }
