--- a/StormWeb/Views/StudentCentre/Profile.cshtml
+++ b/StormWeb/Views/StudentCentre/Profile.cshtml
@@ -14,15 +14,16 @@
         $(".iframe7").colorbox({ iframe: true, width: "10%", height: "30%" });
     });
 </script>
-<div class="row-fluid">
-    <div class="page-header">
-        <h1>
-            Student Profile</h1>
-    </div>
-</div>
+ 
 <div class="row-fluid">
     <div class="span12">
         <div class="box-tab">
+         <div class="page-header">
+                 <h1>
+                       &nbsp;&nbsp;Student Profile
+                        
+                   </h1>
+                    </div>
             <div class="tabbable1">
                 <!-- Only required for left/right tabs -->
                 <ul class="nav nav-tabs">
