--- a/StormWeb/Views/StudentCentre/StudentProfile.cshtml
+++ b/StormWeb/Views/StudentCentre/StudentProfile.cshtml
@@ -6,9 +6,9 @@
  
 <div class="row-fluid">
     <div class="span12">
-        <div class="widget-block">
-            <div class="widget-head">
-                <h2>&nbsp; Personal Details</h2>
+       <div class="box-tab">
+                <div class="page-header">
+                <h1>&nbsp; Personal Details</h1>
             </div>
             <div class="widget-content">
                 <div class="widget-box" >
