--- a/StormWeb/Views/University/Description.cshtml
+++ b/StormWeb/Views/University/Description.cshtml
@@ -7,11 +7,13 @@
 
 <div class="row-fluid">
     <div class="span12">
-        <div class="widget-block">
-            <div class="widget-head">
-                <h3>
-                    University Description</h3>
-            </div>
+       <div class="box-tab"> 
+             <div class="page-header">
+                 <h1>
+                       &nbsp;&nbsp;University Details
+                        
+                   </h1>
+                    </div>
             <div class="widget-content">
                 <div class="widget-box">
                     <table class="data-tbl-boxy table">
