--- a/StormWeb/Views/University/Edit.cshtml
+++ b/StormWeb/Views/University/Edit.cshtml
@@ -60,7 +60,7 @@
             <div class="control-group">
                 <div class="controls">
                     <input type="submit" value="Save Changes" class="btn btn-primary" />
-                    @Html.Button_DeleteOrCancel("Cancel", "../Index")
+                    @Html.Button_DeleteOrCancel("Cancel", "../../University")
                 </div>
             </div>
         </fieldset>
